<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPractice"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/viewMargin"
        android:text="@string/quizTextView"
        android:textColor="@color/colorTextView"
        android:textSize="@dimen/quizTextSize" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/viewMargin"
        android:text="@string/practiceTextView"
        android:textColor="@color/colorTextView"
        android:textSize="@dimen/labelTextSize" />

    <Button
        android:id="@+id/practiceStartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/viewMargin"
        android:background="@color/colorPracticeTransparent"
        android:text="@string/startButton"
        android:textColor="@color/colorTextView" />
</LinearLayout>